--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   },
   "packageManager": "yarn@4.1.1",
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
     "expo": "~50.0.17",
+    "expo-font": "~11.10.3",
+    "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
+    "luxon": "^3.4.4",
     "react": "18.2.0",
     "react-fast-compare": "^3.2.2",
     "react-native": "0.73.6",
@@ -27,6 +31,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
+    "@types/luxon": "^3",
     "@types/node": "^20.12.7",
     "@types/react": "~18.2.45",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
